--- a/free-ai-classes-in-every-city-hackathon-2023/priceprediction.ipynb
+++ b/free-ai-classes-in-every-city-hackathon-2023/priceprediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,17 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train= pd.read_csv('free-ai-classes-in-every-city-hackathon-2023\\Housing_dataset_train.csv')\n",
-    "test=pd.read_csv('free-ai-classes-in-every-city-hackathon-2023\\Housing_dataset_test.csv')"
+    "train= pd.read_csv('C:/Users/Techa/Desktop/DataSet/Hackaton/free-ai-classes-in-every-city-hackathon-2023/Housing_dataset_train.csv')\n",
+    "test=pd.read_csv('C:/Users/Techa/Desktop/DataSet/Hackaton/free-ai-classes-in-every-city-hackathon-2023/Housing_dataset_test.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "((14000, 7), (6000, 6))"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "4  2600700.898  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,32 +214,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Techa\\AppData\\Local\\Temp\\ipykernel_5364\\2703087038.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\Techa\\AppData\\Local\\Temp\\ipykernel_5080\\2703087038.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  train['title'] = train['title'].fillna(train['title'].mode()[0])\n",
-      "C:\\Users\\Techa\\AppData\\Local\\Temp\\ipykernel_5364\\2703087038.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\Techa\\AppData\\Local\\Temp\\ipykernel_5080\\2703087038.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  train['bedroom'] = train['bedroom'].fillna(train['bedroom'].mode()[0])\n",
-      "C:\\Users\\Techa\\AppData\\Local\\Temp\\ipykernel_5364\\2703087038.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\Techa\\AppData\\Local\\Temp\\ipykernel_5080\\2703087038.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  train['parking_space'] = train['parking_space'].fillna(train['parking_space'].mode()[0])\n",
-      "C:\\Users\\Techa\\AppData\\Local\\Temp\\ipykernel_5364\\2703087038.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\Techa\\AppData\\Local\\Temp\\ipykernel_5080\\2703087038.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "((8530, 14), (3657, 14), (8530,), (3657,))"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,106 +327,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model_b(model, xtrain, ytrain, xtest, ytest):\n",
-    "    model.fit(xtrain, ytrain)\n",
-    "    acc = model.score(xtest, ytest)\n",
-    "    pred = model.predict(xtest)\n",
-    "    return acc, pred "
+    "# def model_b(model, xtrain, ytrain, xtest, ytest):\n",
+    "#     model.fit(xtrain, ytrain)\n",
+    "#     acc = model.score(xtest, ytest)\n",
+    "#     pred = model.predict(xtest)\n",
+    "#     return acc, pred \n",
+    "\n",
+    "\n",
+    "# lracc, lrpred = model_b(lr, xtrain, ytrain, xtest, ytest)\n",
+    "# print(\"Logistic regression is \", lracc)\n",
+    "\n",
+    "# rfacc, rfpred = model_b(rf, xtrain, ytrain, xtest, ytest)\n",
+    "# print(\"RandomForest regression is \", rfacc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic regression is  0.5379904204835804\n",
-      "RandomForest regression is  0.6935534204034662\n"
+      "RandomForest regression is  0.7032961331910705\n"
      ]
     }
    ],
    "source": [
-    "lracc, lrpred = model_b(lr, xtrain, ytrain, xtest, ytest)\n",
-    "print(\"Logistic regression is \", lracc)\n",
-    "\n",
-    "rfacc, rfpred = model_b(rf, xtrain, ytrain, xtest, ytest)\n",
+    "rf.fit(xtrain, ytrain)\n",
+    "rfacc = rf.score(xtest, ytest)\n",
+    "rfpred = rf.predict(xtest)\n",
     "print(\"RandomForest regression is \", rfacc)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5379904204835804"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lracc"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#--------------------------------"
+    "### Using the Random forest Model for predicting new dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# xtrain['loc'] = oe.fit_transform(xtrain[['loc']])\n",
-    "# xtest['loc'] = oe.transform(xtest[['loc']])\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# one_hot_encoded = ohe.fit_transform(xtrain[['title']])\n",
-    "# ohe_coded_test = ohe.transform(xtest[['title']])\n",
-    "\n",
-    "# # Convert the sparse matrix to a pandas DataFrame\n",
-    "# encoded_df = pd.DataFrame(one_hot_encoded.toarray(), columns=ohe.get_feature_names_out(['title']))\n",
-    "# encoded_df_test = pd.DataFrame(ohe_coded_test.toarray(), columns=ohe.get_feature_names_out(['title']))\n",
-    "\n",
-    "# # Concatenate the encoded DataFrame with the original DataFrame\n",
-    "# xtrain = pd.concat([xtrain, encoded_df], axis=1)\n",
-    "# xtest = pd.concat([xtest, encoded_df_test], axis=1)\n",
-    "\n",
-    "# xtrain.drop('title', axis=1, inplace=True)\n",
-    "# xtest.drop('title', axis=1, inplace=True)\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#-------------------"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +466,7 @@
        "4  12254    Gombe  Semi-detached duplex        5         6              1"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,11 +477,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "df=test.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop('ID', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df= tranfm(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop('title', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testt= df.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1968198.03315033, 1039252.438066  , 1255064.34462733,\n",
+       "       7345551.37678999, 2282300.41159333, 2753004.36261   ,\n",
+       "       2580766.43286   , 1806680.56474033, 1383904.959161  ,\n",
+       "       1427406.290546  ])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testpred = rf.predict(testt)\n",
+    "testpred[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6000"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(testpred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>loc</th>\n",
+       "      <th>title</th>\n",
+       "      <th>bedroom</th>\n",
+       "      <th>bathroom</th>\n",
+       "      <th>parking_space</th>\n",
+       "      <th>PricePredicted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>845</td>\n",
+       "      <td>Kano</td>\n",
+       "      <td>Penthouse</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.968198e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1924</td>\n",
+       "      <td>Adamawa</td>\n",
+       "      <td>Apartment</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.039252e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10718</td>\n",
+       "      <td>Adamawa</td>\n",
+       "      <td>Bungalow</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.255064e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12076</td>\n",
+       "      <td>Lagos</td>\n",
+       "      <td>Mansion</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.345551e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12254</td>\n",
+       "      <td>Gombe</td>\n",
+       "      <td>Semi-detached duplex</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.282300e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ID      loc                 title  bedroom  bathroom  parking_space  \\\n",
+       "0    845     Kano             Penthouse        4         1              2   \n",
+       "1   1924  Adamawa             Apartment        2         2              4   \n",
+       "2  10718  Adamawa              Bungalow        2         7              2   \n",
+       "3  12076    Lagos               Mansion        9         5              2   \n",
+       "4  12254    Gombe  Semi-detached duplex        5         6              1   \n",
+       "\n",
+       "   PricePredicted  \n",
+       "0    1.968198e+06  \n",
+       "1    1.039252e+06  \n",
+       "2    1.255064e+06  \n",
+       "3    7.345551e+06  \n",
+       "4    2.282300e+06  "
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test['PricePredicted'] = testpred\n",
+    "test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = pd.DataFrame(test[['ID','PricePredicted']]).to_csv('victor_Jokanola_Submissiondsn.csv')"
    ]
   },
   {
