--- a/free-ai-classes-in-every-city-hackathon-2023/priceprediction.ipynb
+++ b/free-ai-classes-in-every-city-hackathon-2023/priceprediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "import os\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -366,6 +367,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "315976187671.28534"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_squared_error(ytest, rfpred)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -682,11 +703,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction = pd.DataFrame(test[['ID','PricePredicted']]).to_csv('victor_Jokanola_Submissiondsn.csv')"
+    "prediction = pd.DataFrame(test[['ID','PricePredicted']]).to_csv('victor_Jokanola_Submissiondsn.csv',index=False)"
    ]
   },
   {
