--- a/free-ai-classes-in-every-city-hackathon-2023/priceprediction.ipynb
+++ b/free-ai-classes-in-every-city-hackathon-2023/priceprediction.ipynb
@@ -87989,7 +87989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -102025,9 +102025,6 @@
         "legend": {
          "tracegroupgap": 0
         },
-        "margin": {
-         "t": 60
-        },
         "template": {
          "data": {
           "bar": [
@@ -102844,6 +102841,9 @@
           }
          }
         },
+        "title": {
+         "text": " distribution of House Prices through its quartiles"
+        },
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -102869,7 +102869,7 @@
     }
    ],
    "source": [
-    "fig = px.box(train, y=\"price\")\n",
+    "fig = px.box(train, y=\"price\", title=' distribution of House Prices through its quartiles')\n",
     "fig.show()"
    ]
   },
